docs(client): the JDK 16+ JOIN flag and the PreparedStatement substitution model
Story BIDC-7, doc half. The cross-index JOIN needs
--add-opens=java.base/java.nio=ALL-UNNAMED on JDK 16 and later, and a BI tool starts its
own JVM — so the page states the constraint, the flag, and JAVA_TOOL_OPTIONS as the way to
reach a JVM you do not launch, with the confirmation line to look for. It also says plainly
that the fat JAR's Add-Opens manifest attribute is NOT the fix: the JVM honours it only for
the jar named on a `java -jar` launch, never for a driver in a tool's driver folder.

The prepared-statement section documents the substitution model itself — client-side,
pre-parse, values escaped, identifiers not bindable, `?` only a placeholder outside quotes
and comments, and the 1024-character parameter bound — plus setArray's IN-position rule and
the setters that are permanently unsupported rather than unfinished.

Twin of the softclient4es-web jdbc.mdx / adbc.mdx change; the code lives in
softclient4es-jdbc.